# DomainWall

./: CMakeLists.txt  Makefile  README.md  plot.py
includes/: domain.hpp  initial_conditions.hpp  potential.hpp  time_evolution.hpp
src/: CMakeLists.txt  domain.cpp  initial_conditions.cpp  main.cpp  potential.cpp  time_evolution.cpp
tests/: CMakeLists.txt  test_potential.cpp
